--- a/Resume.html
+++ b/Resume.html
@@ -2,6 +2,7 @@
 <html lang="en" class="scroll-smooth">
 
 <head>
+  <title>MyResume</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="AI-generated website">
@@ -144,6 +145,7 @@
         },
       },
     }
+
   </script>
 
   <!-- Utilities and Components -->
@@ -362,7 +364,8 @@
     <div id="root">
       <section id="navbar_hero" class="min-h-screen bg-gray-900 text-white relative">
         <!-- Navigation -->
-        <nav class="fixed w-full z-50 bg-gray-900/95 backdrop-blur-sm border-b border-gray-800">
+        <nav class="fixed w-full relative md:h-18 z-50 bg-gray-900/95 backdrop-blur-sm border-b border-gray-800"
+          id="navigation">
           <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
               <!-- Logo -->
@@ -371,22 +374,20 @@
               </div>
 
               <!-- Desktop Navigation -->
-              <div class="hidden md:flex items-center space-x-8">
-                <a href="#about" class="hover:text-accent-400 transition-colors">About</a>
-                <a href="#skills" class="hover:text-accent-400 transition-colors">Skills</a>
-                <a href="#projects" class="hover:text-accent-400 transition-colors">Projects</a>
-                <a href="#experience" class="hover:text-accent-400 transition-colors">Experience</a>
-                <a href="#contact" class="hover:text-accent-400 transition-colors">Contact</a>
+              <div class="hidden absolute right-0 top-16 md:top-0 md:flex md:relative items-center md:space-x-8" id="menu">
+                <a href="#about" class="block md:inline hover:text-accent-400 transition-colors">About</a>
+                <a href="#skills" class="block md:inline hover:text-accent-400 transition-colors">Skills</a>
+                <a href="#projects" class="block md:inline hover:text-accent-400 transition-colors">Projects</a>
+                <a href="#experience" class="block md:inline hover:text-accent-400 transition-colors">Experience</a>
+                <a href="#contact" class="block md:inline hover:text-accent-400 transition-colors">Contact</a>
               </div>
 
               <!-- Mobile Menu Button -->
-              <div class="md:hidden">
-                <button type="button" class="text-gray-300 hover:text-white" aria-label="Toggle menu">
-                  <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
-                    </path>
-                  </svg>
-                </button>
+              <div class="md:hidden transition ease-in-out duration-500" id="burger">
+                <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
+                  </path>
+                </svg>
               </div>
             </div>
           </div>
@@ -775,7 +776,8 @@
           <!-- Timeline Container -->
           <div class="relative">
             <!-- Center Line -->
-            <div class="absolute left-1/2 transform -translate-x-1/2 w-0.5 h-full bg-accent-600/20 hidden md:block"></div>
+            <div class="absolute left-1/2 transform -translate-x-1/2 w-0.5 h-full bg-accent-600/20 hidden md:block">
+            </div>
 
 
             <!-- Timeline Items -->
@@ -1202,7 +1204,7 @@
               <ul class="space-y-2">
                 <li class="flex items-center gap-2 text-gray-400">
                   <i class="fas fa-envelope text-accent-400"></i>
-                  <span>Shivasingh24803@gmai.com</span>
+                  <span>Shivasingh24803@gmail.com</span>
                 </li>
                 <li class="flex items-center gap-2 text-gray-400">
                   <i class="fas fa-phone text-accent-400"></i>
@@ -1233,7 +1235,22 @@
 </element>
 <div id="page_complete">
   <script>
-    console.log('Page complete');
+    const burger = document.querySelector('#burger');
+    const menu = document.querySelector('#menu');
+    const nav = document.querySelector('#navigation');
+
+    burger.addEventListener('click', () => {
+      if (menu.classList.contains('hidden')) {
+        burger.classList.add('rotate-180');
+        nav.classList.add('h-52');
+        menu.classList.remove('hidden');
+      } else {
+        burger.classList.remove('rotate-180');
+        nav.classList.remove('h-52');
+        menu.classList.add('hidden');
+      }
+
+    })
   </script>
   </body>
 
