--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                   <a href="#" class="text-accent-400 hover:text-accent-300 transition-colors">
                     <i class="fab fa-github text-xl"></i>
                   </a>
-                  <a href="#" class="text-accent-400 hover:text-accent-300 transition-colors">
+                  <a href="https://cybertron-support.vercel.app" target="_blank" class="text-accent-400 hover:text-accent-300 transition-colors">
                     <i class="fas fa-external-link-alt text-xl"></i>
                   </a>
                 </di v>
