--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
             </div>
 
             <!-- Quick Links -->
-            <div class="mx-12">
+            <div>
               <h3 class="text-xl font-bold text-accent-400 mb-4">Quick Links</h3>
               <ul class="space-y-2">
                 <li><a href="#about" class="text-gray-400 hover:text-accent-400 transition-colors">About</a></li>
