--- a/index.html
+++ b/index.html
@@ -374,12 +374,12 @@
               </div>
 
               <!-- Desktop Navigation -->
-              <div class="hidden absolute right-0 top-16 md:top-0 md:flex md:relative items-center md:space-x-8" id="menu">
-                <a href="#about" class="block md:inline hover:text-accent-400 transition-colors">About</a>
-                <a href="#skills" class="block md:inline hover:text-accent-400 transition-colors">Skills</a>
-                <a href="#projects" class="block md:inline hover:text-accent-400 transition-colors">Projects</a>
-                <a href="#experience" class="block md:inline hover:text-accent-400 transition-colors">Experience</a>
-                <a href="#contact" class="block md:inline hover:text-accent-400 transition-colors">Contact</a>
+              <div class="hidden absolute right-2 top-16 md:top-0 md:flex md:relative items-center md:space-x-8" id="menu">
+                <a href="#about" class="block text-right md:inline hover:text-accent-400 transition-colors">About</a>
+                <a href="#skills" class="block text-right md:inline hover:text-accent-400 transition-colors">Skills</a>
+                <a href="#projects" class="block text-right md:inline hover:text-accent-400 transition-colors">Projects</a>
+                <a href="#experience" class="block text-right md:inline hover:text-accent-400 transition-colors">Experience</a>
+                <a href="#contact" class="block text-right   md:inline hover:text-accent-400 transition-colors">Contact</a>
               </div>
 
               <!-- Mobile Menu Button -->
